# MoxelEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shaders/: fragment1.glsl  vertex1.glsl
src/: Callbacks.cpp  Callbacks.h  GLFWContext.cpp  GLFWContext.h  GLFWInstance.cpp  GLFWInstance.h  GLFWUtils.cpp  GLFWUtils.h  Moxel.cpp  Moxel.h  Window.cpp  Window.h  WindowContext.cpp  WindowContext.h  WindowParams.cpp  WindowParams.h  World.cpp  World.h
